finished third part

--- a/index.html
+++ b/index.html
@@ -128,7 +128,171 @@
         <!--<div class="circle-one"></div>
         <div class="circle-two"></div>-->
     </div>
-
 </header>
+<div id="container">
+    <div id="body-Recommended-works">
+        <div id="body-one-title">
+            <!--<div id="body-one-title-line"></div>
+            <div id="body-one-title-circle"></div>-->
+            <div id="body-one-title-words">
+                <!--<h4>推荐</h4>
+                <h1>作品</h1>-->
+                <h4>Display for work</h4>
+            </div>
+        </div>
+        <div class="body-one-head">
+            <ul>
+                <li>作品分类</li>
+                <li>作品分类</li>
+                <li>作品分类</li>
+            </ul>
+        </div>
+        <div id="body-one-main">
+            <div class="body-one-main-item">
+                <div class="body-one-item-pic"></div>
+                <div class="body-one-item-words">
+                    <div class="body-one-words-left">
+                        <div class="one-words-left-title">
+                            <p>作品名称</p>
+                        </div>
+                        <div class="one-words-left-describe">
+                            <p>才子佳人才子佳人才子佳人才子佳人</p>
+                        </div>
+                        <div class="one-view-counts">
+
+                        </div>
+                    </div>
+                    <div class="body-one-words-right">
+                        <div class="body-one-words-right-circle"></div>
+                    </div>
+                </div>
+                <div class="body-one-main-bottom"></div>
+            </div>
+            <div class="body-one-main-item">
+                <div class="body-one-item-pic"></div>
+                <div class="body-one-item-words">
+                    <div class="body-one-words-left">
+                        <div class="one-words-left-title">
+                            <p>作品名称</p>
+                        </div>
+                        <div class="one-words-left-describe">
+                            <p>才子佳人才子佳人才子佳人才子佳人</p>
+                        </div>
+                        <div class="one-view-counts">
+
+                        </div>
+                    </div>
+                    <div class="body-one-words-right">
+                        <div class="body-one-words-right-circle"></div>
+                    </div>
+                </div>
+                <div class="body-one-main-bottom"></div>
+            </div>
+            <div class="body-one-main-item">
+                <div class="body-one-item-pic"></div>
+                <div class="body-one-item-words">
+                    <div class="body-one-words-left">
+                        <div class="one-words-left-title">
+                            <p>作品名称</p>
+                        </div>
+                        <div class="one-words-left-describe">
+                            <p>才子佳人才子佳人才子佳人才子佳人</p>
+                        </div>
+                        <div class="one-view-counts">
+
+                        </div>
+                    </div>
+                    <div class="body-one-words-right">
+                        <div class="body-one-words-right-circle"></div>
+                    </div>
+                </div>
+                <div class="body-one-main-bottom"></div>
+            </div>
+            <div class="body-one-main-item">
+                <div class="body-one-item-pic"></div>
+                <div class="body-one-item-words">
+                    <div class="body-one-words-left">
+                        <div class="one-words-left-title">
+                            <p>作品名称</p>
+                        </div>
+                        <div class="one-words-left-describe">
+                            <p>才子佳人才子佳人才子佳人才子佳人</p>
+                        </div>
+                        <div class="one-view-counts">
+
+                        </div>
+                    </div>
+                    <div class="body-one-words-right">
+                        <div class="body-one-words-right-circle"></div>
+                    </div>
+                </div>
+                <div class="body-one-main-bottom"></div>
+            </div>
+        </div>
+        <div id="body-one-bottom"></div>
+    </div>
+    <div id="body-Recommended-article">
+        <div id="body-two-title">
+            <div id="body-two-title-words">
+                <h4>Display for work</h4>
+            </div>
+        </div>
+        <div class="body-one-head">
+            <ul>
+                <li>作品分类</li>
+                <li>作品分类</li>
+                <li>作品分类</li>
+            </ul>
+        </div>
+        <div id="body-two-main">
+            <div class="body-two-main-item">
+                <div class="body-two-left"></div>
+                <div class="body-two-right">
+                    <div class="body-two-right-title">
+                        <h2>国外品牌vi学习分享</h2>
+                        <h5>hello world</h5>
+                    </div>
+                    <div class="body-two-right-describe">
+                        <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
+                    </div>
+                    <div class="body-two-right-author">
+
+                    </div>
+                </div>
+            </div>
+            <div class="body-two-main-item">
+                <div class="body-two-left"></div>
+                <div class="body-two-right">
+                    <div class="body-two-right-title">
+                        <h2>国外品牌vi学习分享</h2>
+                        <h5>hello world</h5>
+                    </div>
+                    <div class="body-two-right-describe">
+                        <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
+                    </div>
+                    <div class="body-two-right-author">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="body-Recommended-designer">
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="help"></div>
+</div>
 </body>
 </html>
