finished third part more

--- a/index.html
+++ b/index.html
@@ -278,7 +278,19 @@
         </div>
     </div>
     <div id="body-Recommended-designer">
+        <div id="body-three-title">
+            <div id="body-three-title-words">
+                <h4>Display for work</h4>
+            </div>
+        </div>
+        <div id="body-three-main">
+            <div id="body-three-main-one">
 
+            </div>
+            <div id="body-three-main-two">
+
+            </div>
+        </div>
     </div>
 
 
