--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     </div>
 </header>
 <div id="container">
+    <!--推荐作品-->
     <div id="body-Recommended-works">
         <div id="body-one-title">
             <!--<div id="body-one-title-line"></div>
@@ -159,7 +160,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-
+                            <p>浏览量 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -179,7 +180,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-
+                            <p>浏览量 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -199,7 +200,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-
+                            <p>浏览量 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -219,7 +220,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-
+                            <p>浏览量 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -231,6 +232,7 @@
         </div>
         <div id="body-one-bottom"></div>
     </div>
+    <!--推荐文章-->
     <div id="body-Recommended-article">
         <div id="body-two-title">
             <div id="body-two-title-words">
@@ -256,7 +258,7 @@
                         <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
                     </div>
                     <div class="body-two-right-author">
-
+                        <div class="author-pic"></div>
                     </div>
                 </div>
             </div>
@@ -271,12 +273,13 @@
                         <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
                     </div>
                     <div class="body-two-right-author">
-
+                        <div class="author-pic"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--推荐设计师-->
     <div id="body-Recommended-designer">
         <div id="body-three-title">
             <div id="body-three-title-words">
@@ -285,26 +288,143 @@
         </div>
         <div id="body-three-main">
             <div id="body-three-main-one">
-
+                <div class="body-three-one-item">
+                    <div class="body-three-item-pic">
+                        <div class="three-one"></div>
+                        <div class="three-circle"></div>
+                        <div class="three-two"></div>
+                    </div>
+                    <div class="body-three-item-words">
+                        <p>应该就如楼上所说纪念二战胜利</p>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                    </div>
+                </div>
+                <div class="body-three-one-item">
+                    <div class="body-three-item-pic">
+                        <div class="three-one"></div>
+                        <div class="three-circle"></div>
+                        <div class="three-two"></div>
+                    </div>
+                    <div class="body-three-item-words">
+                        <p>应该就如楼上所说纪念二战胜利</p>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                    </div>
+                </div>
+                <div id="three-divider"></div>
+                <div class="body-three-one-item">
+                    <div class="body-three-item-pic">
+                        <div class="three-one"></div>
+                        <div class="three-circle"></div>
+                        <div class="three-two"></div>
+                    </div>
+                    <div class="body-three-item-words">
+                        <p>应该就如楼上所说纪念二战胜利</p>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                    </div>
+                </div>
+                <div class="body-three-one-item">
+                    <div class="body-three-item-pic">
+                        <div class="three-one"></div>
+                        <div class="three-circle"></div>
+                        <div class="three-two"></div>
+                    </div>
+                    <div class="body-three-item-words">
+                        <p>应该就如楼上所说纪念二战胜利</p>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                        <h6>2963</h6>
+                    </div>
+                </div>
             </div>
             <div id="body-three-main-two">
-
+                <div id="become-us"></div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <div id="help"></div>
+    <!--站内小贴士-->
+    <div id="set-tag">
+        <div id="body-four-title">
+            <div id="body-four-title-words">
+                <h4>the hot issue</h4>
+            </div>
+        </div>
+        <div id="body-four-main">
+            <div id="four-one">
+                <div id="four-one-top">
+                    <h2>视觉中国官网建设项目整合</h2>
+                    <h6>页面点击鼠标选择菜单中的查看源文件就可以看到实际网站...</h6>
+                    <h1>16.06.02</h1>
+                </div>
+            </div>
+            <div id="four-two">
+                <div class="four-two-item">
+                    <img src="img/3_3_07.png">
+                    <div id="four-two-words1">
+                        <h2>写给设计初学者的配色指南</h2>
+                        <h6>页面点击鼠标选择菜单中的查看源文件就可以看到实际网站...</h6>
+                        <h1>16.06.02</h1>
+                    </div>
+                </div>
+                <div class="four-two-item">
+                    <img src="img/3_3_10.jpg">
+                    <div id="four-two-words2">
+                        <h2>写给设计初学者的配色指南</h2>
+                        <h6>页面点击鼠标选择菜单中的查看源文件就可以看到实际网站...</h6>
+                        <h1>16.06.02</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--本站合作企业-->
+    <div id="partner">
+        <div id="body-five-title">
+            <div id="body-five-title-words">
+                <h4>Operative Enterprise</h4>
+            </div>
+        </div>
+        <div id="body-five-main">
+            <div id="body-five-main-one"></div>
+            <div id="body-five-main-two">
+                <div id="partners"></div>
+            </div>
+        </div>
+    </div>
+    <!--底部-->
+    <div id="bottom">
+        <div id="bottom-one">
+            <div id="logo1"></div>
+            <div id="bottom-point1"></div>
+            <div id="bottom-divider"></div>
+            <div id="bottom-point2"></div>
+            <div id="logo2"></div>
+        </div>
+        <div id="bottom-two">
+            <p>商务合作</p>
+            <p>意见反馈</p>
+            <p>关于我们</p>
+            <p>联系我们</p>
+            <p>版权声明</p>
+            <p>隐私保护</p>
+        </div>
+        <div id="bottom-three">
+            <div id="bottom-three-word">
+                <p>IPC备14007358号-1 / 京公网安备11010802014104号</p>
+                <p>Powered by © 2008-2016 UI.CN</p>
+            </div>
+            <div id="bottom-three-pic">
+                <div class="pic-item"></div>
+                <div class="pic-item"></div>
+                <div class="pic-item"></div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
