--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
                 <li>作品分类</li>
                 <li>作品分类</li>
             </ul>
+            <div id="one-filter">
+                <div class="one-filter-item">
+                    <div class="one-filter-circle"></div>
+                    <p>作品分类一</p>
+                </div>
+                <div class="one-filter-item">
+                    <div class="one-filter-circle"></div>
+                    <p>作品分类二</p>
+                </div>
+                <div class="one-filter-item">
+                    <div class="one-filter-circle"></div>
+                    <p>作品分类三</p>
+                </div>
+                <div id="one-filter-divider"></div>
+            </div>
         </div>
         <div id="body-one-main">
             <div class="body-one-main-item">
@@ -160,7 +175,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-                            <p>浏览量 2983</p>
+                            <p>views 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -180,7 +195,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-                            <p>浏览量 2983</p>
+                            <p>views 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -200,7 +215,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-                            <p>浏览量 2983</p>
+                            <p>views 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -220,7 +235,7 @@
                             <p>才子佳人才子佳人才子佳人才子佳人</p>
                         </div>
                         <div class="one-view-counts">
-                            <p>浏览量 2983</p>
+                            <p>views 2983</p>
                         </div>
                     </div>
                     <div class="body-one-words-right">
@@ -258,6 +273,12 @@
                         <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
                     </div>
                     <div class="body-two-right-author">
+                        <p>作者名称符号</p>
+                        <div class="save">
+                            <h5>4263</h5>
+                            <h5>4263</h5>
+                        </div>
+                        <div class="bg"></div>
                         <div class="author-pic"></div>
                     </div>
                 </div>
@@ -273,6 +294,12 @@
                         <h3>随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握随时掌握</h3>
                     </div>
                     <div class="body-two-right-author">
+                        <p>作者名称符号</p>
+                        <div class="save">
+                            <h5>4263</h5>
+                            <h5>4263</h5>
+                        </div>
+                        <div class="bg"></div>
                         <div class="author-pic"></div>
                     </div>
                 </div>
